--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     "body-parser": "^1.18.3",
     "core-js": "^2.5.4",
     "express": "^4.16.3",
-    "rxjs": "^6.0.0",
+    "socket.io": "^2.1.1",
     "xdrip-js": "git://github.com/xdrip-js/xdrip-js.git#dev",
     "zone.js": "~0.8.26"
   },
