--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "core-js": "^2.5.4",
     "express": "^4.16.3",
     "socket.io": "^2.1.1",
+    "time-ago-pipe": "^1.3.2",
     "xdrip-js": "git://github.com/xdrip-js/xdrip-js.git#dev",
     "zone.js": "~0.8.26"
   },
