--- a/package.json
+++ b/package.json
@@ -31,7 +31,8 @@
     "socket.io": "^2.1.1",
     "time-ago-pipe": "^1.3.2",
     "xdrip-js": "git://github.com/xdrip-js/xdrip-js.git#dev",
-    "zone.js": "~0.8.26"
+    "zone.js": "~0.8.26",
+    "typescript": "~2.7.2"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~0.7.0",
@@ -49,7 +50,6 @@
     "karma-jasmine-html-reporter": "^0.2.2",
     "protractor": "~5.3.0",
     "ts-node": "~5.0.1",
-    "tslint": "~5.9.1",
-    "typescript": "~2.7.2"
+    "tslint": "~5.9.1"
   }
 }
