--- a/package.json
+++ b/package.json
@@ -12,8 +12,6 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/cli": "~6.1.3",
-    "@angular/compiler-cli": "^6.1.0",
     "@angular/animations": "^6.1.2",
     "@angular/cdk": "^6.4.5",
     "@angular/common": "^6.1.0",
@@ -31,11 +29,12 @@
     "socket.io": "^2.1.1",
     "time-ago-pipe": "^1.3.2",
     "xdrip-js": "git://github.com/xdrip-js/xdrip-js.git#dev",
-    "zone.js": "~0.8.26",
-    "typescript": "~2.7.2"
+    "zone.js": "~0.8.26"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~0.7.0",
+    "@angular/cli": "~6.1.3",
+    "@angular/compiler-cli": "^6.1.0",
     "@angular/language-service": "^6.1.0",
     "@types/jasmine": "~2.8.6",
     "@types/jasminewd2": "~2.0.3",
@@ -50,6 +49,7 @@
     "karma-jasmine-html-reporter": "^0.2.2",
     "protractor": "~5.3.0",
     "ts-node": "~5.0.1",
-    "tslint": "~5.9.1"
+    "tslint": "~5.9.1",
+    "typescript": "~2.7.2"
   }
 }
