--- a/package.json
+++ b/package.json
@@ -10,6 +10,9 @@
     "e2e": "ng e2e",
     "postinstall": "ng build --aot --prod"
   },
+  "engines": {
+    "node": "<=9.11.2"
+  },
   "private": true,
   "dependencies": {
     "@angular/animations": "^6.1.2",
